# collivind

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/autopilot-templates/: plan.md  spec.md
.claude/commands/: autopilot-loop.md
.claude/skills/autopilot-loop/: SKILL.md
.claude/visuals/: architecture.html  data-model.html
.github/workflows/: ci.yml  release.yml
benchmarks/: BENCHMARKS.md  longmemeval_bench.py  results_longmemeval_r5.jsonl  results_longmemeval_r5_bge.jsonl
docs/superpowers/specs/: 2026-04-29-collivind-design.md
npm/: package.json
src/collivind/: __init__.py  __main__.py  config.py  exceptions.py  update_check.py  version.py
src/collivind/cli/: __init__.py  main.py
src/collivind/docker/: __init__.py  compose.py  health.py
src/collivind/engine/: __init__.py  dedup.py  enrichment.py  extractor.py  graph_engine.py  memory_manager.py  search_engine.py
src/collivind/mcp/: __init__.py  server.py  tools.py
src/collivind/models/: __init__.py  entity.py  (+4 more)
tests/integration/: test_embedded_pipeline.py  test_embedding_service.py  test_full_pipeline.py  test_neo4j_store.py  test_qdrant_store.py
tests/mcp/: test_server.py  test_tools.py
tests/unit/: test_agent_commands.py  test_cli_commands.py  test_config.py  test_embedded_lock.py  test_embedding_providers.py  test_enrichment.py  test_env_config.py  test_extractor.py  test_factory.py  test_graph_engine.py  test_graph_sqlite.py  test_graph_sqlite_concurrency.py  test_health_checks.py  test_hooks.py  test_memory_manager.py  test_memory_verbs.py  test_models.py  test_multi_process.py  test_neo4j_serialization.py  test_pagination.py  test_query_enrichment.py  test_search_engine.py  test_search_filters.py  test_session_tracking.py  test_smart_dedup.py  test_temporal_decay.py  test_update_check.py  test_vector_sqlite.py  test_versioning.py
(+25 files in other folders)
