[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collivind-memory"
dynamic = ["version"]
description = "Graph-based memory layer for AI coding assistants."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Eugene Zubanov" }
]
dependencies = [
    "click>=8.1.7",
    "qdrant-client>=1.7.0",
    "neo4j>=5.17.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
collivind = "collivind.cli.main:cli"

[tool.hatch.version]
path = "src/collivind/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/collivind"]
