[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collivind-memory"
dynamic = ["version"]
description = "Graph-based memory layer for AI coding assistants."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Eugene Zubanov" }
]
dependencies = [
    "click>=8.1.7",
    "qdrant-client>=1.7.0",
    "neo4j>=5.17.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
embedded = [
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.scripts]
collivind = "collivind.cli.main:cli"

[tool.hatch.version]
path = "src/collivind/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/collivind"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/collivind/cli/commands/hook.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Docker services",
]
